header ico group added and align fixed

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -12198,15 +12198,17 @@ a.add_to_wishlist.button.alt:hover {
 .head-ico {
   color: white;
   font-size: 20px;
-  padding-right: 26px; }
+  padding: .5rem 1rem; }
 
 .head-ico:hover {
   color: white;
-  font-size: 20px;
-  padding-right: 26px; }
+  font-size: 20px; }
 
 .top-search-field-wrapper [type=search] {
   width: 100%; }
+
+.header-ico-group {
+  padding: 0 0 25px 0; }
 
 /*
 * Use existing Bootstrap 4 classes and
